# gtest-template

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE-Google.txt  NOTES.md  README.md
include/: factorial.h
src/: CMakeLists.txt  factorial.cc  my_string.cc  queue.cc  sample1.cc
test/: CMakeLists.txt  _template.cc  _template.cpp  death_test.cc  exception_test.cc  factorial_para_test.cc  factorial_test.cc  factorial_test.cpp  my_string_test.cc  queue_test.cc  sample1_test.cpp
